...
    val Copy: ImageVector = outline("CaraML.Copy", "M9 8h12v13H9Z", "M15 5V2H3v13h3")
    val Create: ImageVector = outline("CaraML.Create", "M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z", "m15 5 4 4")
    val Delete: ImageVector = outline("CaraML.Delete", "M3 6h18M9 6V3h6v3M5 6l1 15h12l1-15M10 10v7m4-7v7")
    val Device: ImageVector = outline("CaraML.Device", "M8 2h8a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2Z", "M10 5h4m-3 14h2")
    val Download: ImageVector = outline("CaraML.Download", "M12 3v12m-5-5 5 5 5-5", "M4 16v4h16v-4")
    val Favorite: ImageVector = outline("CaraML.Favorite", "M12 21 3.5 12.5a5.5 5.5 0 0 1 8.5-7 5.5 5.5 0 0 1 8.5 7Z")
    val Filters: ImageVector = outline("CaraML.Filters", "M3 6h7m4 0h7M3 18h11m4 0h3", "M10 3v6m4 6v6")
    val Forward: ImageVector = outline("CaraML.Forward", "M3 12h14m-7-7 7 7-7 7", autoMirror = true)
    val Help: ImageVector = outline("CaraML.Help", "M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z", "M9 8a3 3 0 0 1 6 1c0 2-3 2-3 4m0 4v.1")
    val Hourglass: ImageVector = outline("CaraML.Hourglass", "M6 3h12m-12 18h12M7 3v4l10 10v4M17 3v4L7 17v4")
    val Image: ImageVector = outline("CaraML.Image", "M4 3h16a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1Z", "m3 16 5-5 4 4 3-3 6 6", "M17 7v.1")
    val Info: ImageVector = outline("CaraML.Info", "M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z", "M12 11v6m0-10v.1")
    val Memory: ImageVector = outline("CaraML.Memory", "M5 6h14a2 2 0 0 1 2 2v9H3V8a2 2 0 0 1 2-2Z", "M7 10v3m5-3v3m5-3v3M6 17v3m4-3v3m4-3v3m4-3v3")
...
